fix overflow in code blocks

--- a/static/prism.css
+++ b/static/prism.css
@@ -39,10 +39,12 @@ pre[class*='language-'] {
 	overflow: auto;
 	padding: 1.5rem 2rem;
 	margin: .8rem 0 2.4rem;
-	/* max-width: var(--code-w); */
+	max-width: 100%;
 	border-radius: var(--border-r);
 	box-shadow: 1px 1px 1px rgba(68, 68, 68, .12) inset;
 	white-space: normal;
+	display: block;
+	overflow-x: auto;
 }
 
 :not(pre) > code[class*='language-'],
